name:           chat
version:        1.0.0
synopsis:       Stanford CS240h Lab 2 - Chat Server
build-type:     Simple
cabal-version:  >= 1.10
category:       System

-- STUDENTS: Make sure you add any no haskell source files you want included in
-- your submission here!
extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Chat
  build-depends:
    base < 5
--   ,containers
   ,network >= 2.5.0.0
  default-language: Haskell2010
  ghc-options: -Wall

executable chat
  main-is: Server.hs
  build-depends:
    base < 5
   ,chat

test-suite test-chat
  hs-source-dirs: test
  main-is: TestChat.hs
  type: exitcode-stdio-1.0
  build-depends:
    base < 5
   ,chat
   ,hspec
   ,QuickCheck > 2.5
  default-language: Haskell2010
  ghc-options: -Wall

